--- a/index.html
+++ b/index.html
@@ -17,12 +17,29 @@
     <style>
       :root { --teal: #051F22; --gold: #C5A059; --light-gold: #E2D1A7; }
 
+      /* PREVENT WHITE FLASH: Force background immediately */
       html, body { 
-          background-color: var(--teal) !important; 
+          background-color: #051F22 !important; 
           margin: 0; padding: 0; 
           height: 100%; width: 100%;
           overflow: hidden; position: fixed;
       }
+
+      /* INSTANT LOADING SCREEN */
+      #splash-overlay {
+          position: fixed;
+          inset: 0;
+          background-color: #051F22;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          z-index: 9999;
+      }
+      .loader-text { font-family: 'Cinzel', serif; color: #C5A059; font-size: 20px; letter-spacing: 2px; margin-bottom: 15px; }
+      .spinner { width: 25px; height: 25px; border: 2px solid rgba(197,160,89,0.2); border-top: 2px solid #C5A059; border-radius: 50%; animation: spin 1s linear infinite; }
+      @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
       #root { height: 100%; display: flex; flex-direction: column; }
 
       /* HEADER: Pushed down for notch and centered */
@@ -72,7 +89,6 @@
       }
       .index-bar::-webkit-scrollbar { display: none; }
 
-      /* FOOTER FIX: LOCKED TO 15PX */
       .app-footer {
           background-color: var(--teal);
           height: 15px !important; flex-shrink: 0;
@@ -83,7 +99,6 @@
       .animate-in { animation: fadeIn 0.4s ease-out; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(15px); } to { opacity: 1; transform: translateY(0); } }
       
-      /* SETTINGS MODAL */
       .modal-overlay {
           position: fixed; inset: 0; background: rgba(0,0,0,0.8);
           z-index: 200; display: flex; align-items: flex-end;
@@ -93,6 +108,12 @@
     </style>
 </head>
 <body>
+    <!-- This screen stays visible while Babel/React is loading -->
+    <div id="splash-overlay">
+        <div class="loader-text">QALB-E-DUA</div>
+        <div class="spinner"></div>
+    </div>
+
     <div id="root"></div>
     <script type="text/babel">
       const { useState, useEffect, Fragment, useRef } = React;
@@ -2074,9 +2095,7 @@
         }
 
       };
-
-      
-      const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
+const IconSettings = () => <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#C5A059" strokeWidth="2"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l-.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l-.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l-.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"/><circle cx="12" cy="12" r="3"/></svg>;
       const IconBack = () => <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#E2D1A7" strokeWidth="2.5"><path d="m15 18-6-6 6-6"/></svg>;
 
       const THEMES = {
@@ -2092,7 +2111,14 @@
         const [fontScale, setFontScale] = useState(0);
         const scrollRef = useRef(null);
 
+        useEffect(() => {
+          const splash = document.getElementById('splash-overlay');
+          if (splash) splash.style.display = 'none';
+        }, []);
+
         useEffect(() => { if (scrollRef.current) scrollRef.current.scrollTop = 0; }, [activePageId]);
+
+        const clean = (t) => t ? t.replace(/۞/g, '') : '';
 
         const renderBlock = (block, idx, blockId) => {
           if (!block) return null;
@@ -2100,24 +2126,28 @@
           const eSize = 18 + (fontScale * 1);
           switch (block.type) {
             case 'arabic': case 'arabic-indopak':
-              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2" style={{ color: theme.text, fontSize: `${aSize}px` }}>{block.text}</p>; 
+              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2" style={{ color: theme.text, fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
             case 'arabic-green':
-              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2 text-[#4ADE80]" style={{ fontSize: `${aSize}px` }}>{block.text}</p>; 
+              return <p key={idx} dir="rtl" className="font-arabic mb-6 text-center font-bold px-2 text-[#4ADE80]" style={{ fontSize: `${aSize}px` }}>{clean(block.text)}</p>; 
             case 'text':
-              return <p key={idx} className="text-center font-sans mb-4 opacity-90 leading-relaxed font-medium" style={{ color: theme.text, fontSize: `${eSize}px` }}>{block.text}</p>; 
-            case 'section-title': 
+              return <p key={idx} className="text-center font-sans mb-4 opacity-90 leading-relaxed font-medium px-4" style={{ color: theme.text, fontSize: `${eSize}px` }}>{block.text}</p>; 
+            case 'section-title': case 'title-green':
               return <h3 id={blockId} key={idx} className="nav-target text-center font-heading font-bold text-[13px] tracking-widest mb-6 pb-2 border-b border-[#C5A059]/40 uppercase text-[#C5A059] pt-2">{block.text}</h3>;
+            case 'subtitle-green':
+              return <p key={idx} dir="rtl" className="text-center font-arabic mb-4 text-[#4ADE80] text-xl px-4">{clean(block.text)}</p>;
+            case 'reference-small':
+              return <p key={idx} className="text-center text-[11px] mb-6 opacity-50 italic px-4" style={{color: theme.text}}>{block.text}</p>;
             case 'allah-name': 
               return (
                 <div key={idx} className="mb-8 border-b border-white/10 pb-4 text-center"> 
                   <div className="flex justify-between items-center mb-1">
                     <span className="font-bold text-lg text-[#FF4444]">{block.number}</span>
-                    <span className="font-arabic font-bold text-[#4488FF]" style={{ fontSize: '40px' }}>{block.arabic}</span>
+                    <span className="font-arabic font-bold text-[#4488FF]" style={{ fontSize: '40px' }}>{clean(block.arabic)}</span>
                   </div>
                   <div className="font-bold opacity-60 text-[13px] text-[#FF4444] uppercase">{block.english}</div>
                 </div>
               );
-            case 'flower-icon': return <div key={idx} className="text-center text-xl my-4 text-[#4ADE80]">{block.text}</div>;
+            case 'flower-icon': return null;
             case 'hr': return <div key={idx} className="h-px w-1/4 mx-auto bg-[#C5A059]/30 my-8" />;
             case 'count-badge': return <div key={idx} className="flex justify-center mb-6"><span className="px-4 py-1.5 rounded-full text-[10px] font-bold border border-[#C5A059] text-[#C5A059] uppercase bg-black/30">{block.text}</span></div>;
             default: return null;
@@ -2129,7 +2159,7 @@
           const jumps = [];
           let jId = 0;
           page?.cards.forEach(card => card.content.forEach(block => {
-            if (block.type === 'section-title') {
+            if (block.type === 'section-title' || block.type === 'title-green') {
               const uid = `nav-${activePageId}-${jId++}`;
               block._jumpId = uid;
               jumps.push({ text: block.text, id: uid });
@@ -2138,7 +2168,7 @@
 
           return (
             <Fragment>
-              <div className="app-header shadow-2xl">
+              <div className="app-header shadow-2xl" style={{backgroundColor: theme.bg}}>
                 <div className="header-content">
                   <button onClick={() => setActivePageId(null)} className="absolute left-5 active:opacity-40 p-1"><IconBack /></button>
                   <h1 className="font-heading font-bold text-[14px] tracking-widest uppercase text-[#C5A059]">{page.title}</h1>
@@ -2155,7 +2185,7 @@
               <main ref={scrollRef} className="main-content animate-in" style={{ backgroundColor: theme.bg }}>
                 <div className="max-w-md mx-auto p-5 pb-20">
                   {page.cards.map((card, idx) => (
-                    <div key={idx} className="mb-8 p-8 border-[2px] border-[#C5A059]/40 rounded-[2.5rem] shadow-xl" style={{ backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.card }}>
+                    <div key={idx} className="mb-8 p-8 border-[2px] border-[#C5A059]/30 rounded-[2.5rem] shadow-xl" style={{ backgroundColor: card.variant === 'rabbana' ? '#1F2937' : theme.card }}>
                       {card.content.map((block, bIdx) => renderBlock(block, bIdx, block._jumpId))}
                     </div>
                   ))}
@@ -2167,13 +2197,13 @@
 
         const renderMenu = () => (
           <Fragment>
-            <div className="app-header">
+            <div className="app-header" style={{backgroundColor: '#051F22'}}>
                <div className="header-content">
                  <h1 className="font-heading font-bold text-[22px] text-[#C5A059] tracking-widest uppercase">Qalb-e-Dua</h1>
                  <button onClick={() => setShowSettings(true)} className="absolute right-6 p-1 active:scale-90"><IconSettings /></button>
                </div>
             </div>
-            <main ref={scrollRef} className="main-content animate-in">
+            <main ref={scrollRef} className="main-content animate-in" style={{backgroundColor: '#051F22'}}>
               <div className="mihrab-container">
                 <div className="max-w-md mx-auto">
                   {MENU_ITEMS.map((item) => (
@@ -2186,9 +2216,9 @@
         );
 
         return (
-          <div className="flex flex-col h-full bg-[#051F22]">
+          <div className="flex flex-col h-full" style={{ backgroundColor: activePageId ? theme.bg : '#051F22' }}>
             {activePageId ? renderPage() : renderMenu()}
-            <footer className="app-footer"></footer>
+            <footer className="app-footer" style={{backgroundColor: activePageId ? theme.bg : '#051F22'}}></footer>
 
             {showSettings && (
               <div className="modal-overlay" onClick={() => setShowSettings(false)}>
