--- a/index.html
+++ b/index.html
@@ -2242,7 +2242,7 @@
         }
 
      }; // End of your data
-    </script>
+     </script>
 <!-- 3. React App logic only - Babel will now run much faster -->
 <script type="text/babel">
 const { useState, useEffect, Fragment, useRef } = React;
@@ -2259,7 +2259,7 @@ const THEMES = {
 const App = () => {
   const [activePageId, setActivePageId] = useState(null);
   const [showSettings, setShowSettings] = useState(false);
-  const [theme, setTheme] = useState(THEMES.teal);
+  const [theme, setTheme] = useState(THEMES.teal); // Kept as THEMES.teal as per your request
   const [fontScale, setFontScale] = useState(0);
   const scrollRef = useRef(null);
 
@@ -2288,13 +2288,16 @@ const App = () => {
         return <p key={idx} dir="rtl" className="font-arabic mb-6 text-[#2D8A4E] text-xl px-2" style={{ textAlign: 'justify', textJustify: 'inter-word' }}>{clean(block.text)}</p>;
 
       case 'arabic': case 'arabic-indopak':
-        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold px-1" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px`, textAlign: 'justify', textJustify: 'inter-word', lineHeight:'2.05' }}>{clean(block.text)}</p>;
+        // MODIFIED: Increased padding from px-1 to px-4 to make lines shorter
+        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold px-4" style={{ color: theme.id === 'cream' ? '#000' : theme.text, fontSize: `${aSize}px`, textAlign: 'justify', textJustify: 'inter-word', lineHeight:'2.05' }}>{clean(block.text)}</p>;
 
       case 'arabic-green':
-        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold px-1 text-[#2D8A4E]" style={{ fontSize: `${aSize}px`, textAlign:'justify', textJustify:'inter-word', lineHeight:'2.05' }}>{clean(block.text)}</p>;
+        // MODIFIED: Increased padding from px-1 to px-4 to make lines shorter
+        return <p key={idx} dir="rtl" className="font-arabic mb-6 font-bold px-4 text-[#2D8A4E]" style={{ fontSize: `${aSize}px`, textAlign:'justify', textJustify:'inter-word', lineHeight:'2.05' }}>{clean(block.text)}</p>;
 
       case 'text':
-        return <p key={idx} className="font-sans mb-4 opacity-90 font-medium px-2" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px`, textAlign:'justify', lineHeight: '1.7' }}>{block.text}</p>;
+        // MODIFIED: Increased padding from px-2 to px-4 to make lines shorter
+        return <p key={idx} className="font-sans mb-4 opacity-90 font-medium px-4" style={{ color: theme.id === 'cream' ? '#333' : theme.text, fontSize: `${eSize}px`, textAlign:'justify', lineHeight: '1.7' }}>{block.text}</p>;
 
       case 'reference-small':
         return <p key={idx} className="text-center text-[11px] mb-6 opacity-50 italic px-4" style={{ color: theme.id === 'cream' ? '#666' : theme.text }}>{block.text}</p>;
